--- a/scoot-app/src/components/_base/_global.scss
+++ b/scoot-app/src/components/_base/_global.scss
@@ -1,4 +1,6 @@
 .body {
-    padding-left: 32px;
-    padding-right: 32px;
+  padding-top: 22px;
+  padding-left: 32px;
+  padding-right: 32px;
+
 }
