--- a/scoot-app/src/components/_base/_typography.scss
+++ b/scoot-app/src/components/_base/_typography.scss
@@ -1,59 +1,61 @@
 @import url("https://fonts.googleapis.com/css2?family=Lexend+Deca&family=Space+Mono:wght@400;700&display=swap");
 @import "./breakpoints";
 
-.typography {
-    &--body {
-        font-family: "Lexend Deca";
-        font-size: 15px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 25px;
-    }
-    &--h1 {
-        font-family: "Space Mono";
-        font-size: 56px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: 56px;
-        letter-spacing: -2.5px;
-        color: var(--color--darknav);
-    }
+@mixin typography() {
+  &--body {
+    font-family: "Lexend Deca";
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 25px;
+  }
+  &--h1 {
+    font-family: "Space Mono";
+    font-size: 56px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 56px;
+    letter-spacing: -2.5px;
+  }
 
-    &--h2 {
-        font-family: "Space Mono";
-        font-size: 48px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: 48px;
-        letter-spacing: -2.143px;
-        color: var(--color--darknav);
-    }
+  &--h2 {
+    font-family: "Space Mono";
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 48px;
+    letter-spacing: -2.143px;
+  }
 
-    &--h3 {
-        font-family: "Space Mono";
-        font-size: 40px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: 48px;
-        letter-spacing: -1.786px;
-    }
+  &--h3 {
+    font-family: "Space Mono";
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 48px;
+    letter-spacing: -1.786px;
 
-    &--h4 {
-        font-family: "Space Mono";
-        font-size: 24px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: 28px;
-        letter-spacing: -1.071px;
+    @media (min-width: $xlBreakpoint) {
+      font-size: 56px;
+      line-height: 56px;
+      letter-spacing: -2.5px;
     }
+  }
 
-    &--button{
-        font-family: 'Space Mono';
-        font-size: 15px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: 25px;
-        color: var(--color--white);
+  &--h4 {
+    font-family: "Space Mono";
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 28px;
+    letter-spacing: -1.071px;
+  }
 
-    }
+  &--button {
+    font-family: "Space Mono";
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 25px;
+  }
 }
