--- a/scoot-app/src/components/_base/index.scss
+++ b/scoot-app/src/components/_base/index.scss
@@ -1,5 +1,5 @@
 @import "./reset.scss";
-@import "./breakpoints";
-@import "./colors";
-@import "./typography";
-@import "./global";
+@import "./_breakpoints.scss";
+@import "./_colors.scss";
+@import "./_typography.scss";
+@import "./_global.scss";
