--- a/scoot-app/src/components/organisms/Header/header.module.scss
+++ b/scoot-app/src/components/organisms/Header/header.module.scss
@@ -12,6 +12,11 @@
     // padding-right: 40px;
     align-items: center;
     padding-left: 0;
+    padding-top: 34px;
+  }
+
+  @media (min-width: $xlBreakpoint) {
+    display: flex;
   }
 
   &__hamburger {
