--- a/scoot-app/src/components/_base/_typography.scss
+++ b/scoot-app/src/components/_base/_typography.scss
@@ -42,6 +42,21 @@
     }
   }
 
+  &--title{
+    font-family: "Space Mono";
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 32px;
+    letter-spacing: -1.429px;
+
+    @media (min-width: $mdBreakpoint){
+      font-size: 48px;
+      line-height: 48px;
+      letter-spacing: -2.143px;
+    }
+  }
+
   &--h4 {
     font-family: "Space Mono";
     font-size: 24px;
