--- a/scoot-app/src/components/molecules/ServiceCard/servicecard.module.scss
+++ b/scoot-app/src/components/molecules/ServiceCard/servicecard.module.scss
@@ -55,6 +55,8 @@
     @media (min-width: $xlBreakpoint) {
       max-width: 445px;
       text-align: justify;
+      justify-content: center;
+      text-align: left;
     }
   }
 
