--- a/scoot-app/src/components/molecules/SocialMedia/socialmedia.module.scss
+++ b/scoot-app/src/components/molecules/SocialMedia/socialmedia.module.scss
@@ -1,7 +1,13 @@
-.container{
-    display: flex;
-   
-    gap: 20px;
-    padding-top: 85px;
-    padding-bottom: 88px;
+.container {
+  display: flex;
+
+  gap: 20px;
+  padding-top: 85px;
+  padding-bottom: 88px;
+
+  @media (min-width: $xlBreakpoint) {
+    padding-right: 145px;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
 }
