--- a/scoot-app/src/components/molecules/TextList/textlist.module.scss
+++ b/scoot-app/src/components/molecules/TextList/textlist.module.scss
@@ -1,31 +1,30 @@
 .container {
   display: flex;
-
+  flex-direction: column;
   align-items: center;
+
   &__list {
-    flex-direction: row;
+    display: flex;
+    flex-direction: column;
+    &--header {
+      display: none;
+      @media (min-width: $mdBreakpoint) {
+        display: flex;
+        flex-direction: row;
+      }
+    }
 
     @media (min-width: $mdBreakpoint) {
       display: flex;
+      flex-direction: row;
       max-width: 1000px;
       margin: 0 auto;
       gap: 32px;
       align-items: baseline;
+      margin-right: 14px;
+    margin-left: 50px;
+
     }
-  }
-
-  &__logo {
-    width: 75.5px;
-
-    @media (min-width: $mdBreakpoint) {
-      width: 167.8px;
-      padding-right: 58.8px;
-    }
-  }
-
-  &__logoList {
-    display: flex;
-    align-items: center;
   }
 
   &__element {
