--- a/scoot-app/src/components/organisms/Header/header.module.scss
+++ b/scoot-app/src/components/organisms/Header/header.module.scss
@@ -1,4 +1,4 @@
-.container {
+.header {
   display: flex;
   align-items: baseline;
   justify-content: flex-start;
@@ -8,8 +8,6 @@
 
   @media (min-width: $mdBreakpoint) {
     justify-content: space-around;
-    // padding-left: 40px;
-    // padding-right: 40px;
     align-items: center;
     padding-left: 0;
     padding-top: 34px;
@@ -17,6 +15,55 @@
 
   @media (min-width: $xlBreakpoint) {
     display: flex;
+    max-width: 1440px;
+  }
+
+  &__logo {
+    width: 75.5px;
+    @media (min-width: $mdBreakpoint) {
+      width: 107px;
+    }
+    max-width: 107px;
+  }
+
+  &__list {
+    display: flex;
+    flex-direction: row;
+
+    @media (min-width: $xlBreakpoint) {
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+    }
+  }
+
+  &__allcomponents {
+    align-items: center;
+
+    @media (min-width: $xlBreakpoint) {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+    }
+  }
+
+  &__containerMenu {
+    display: flex;
+    flex-direction: column;
+
+    &--header {
+      display: none;
+      @media (min-width: $mdBreakpoint) {
+        display: flex;
+        flex-direction: row;
+      }
+
+      @media (min-width: $xlBreakpoint) {
+        width: 100%;
+      }
+    }
   }
 
   &__hamburger {
